# ploshtadka-notifications-ms

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: crud.py  deps.py  models.py  schemas.py  scopes.py  settings.py
app/routers/: notifications.py  payments.py
tests/: conftest.py  factories.py  test_notifications.py  test_payments.py  test_scopes.py
